force-app/main/default/objects/Contact/fields/Academic_Title__c.field-meta.xml
<CustomField>
    <fullName>Academic_Title__c</fullName>
    <label>Academic Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>