force-app/main/default/objects/Contact/fields/Account_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_English__c</fullName>
    <label>Account Name (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>