force-app/main/default/objects/Contact/fields/AdminPhone__c.field-meta.xml
<CustomField>
    <fullName>AdminPhone__c</fullName>
    <label>AdminPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>