force-app/main/default/objects/Contact/fields/Advocates__c.field-meta.xml
<CustomField>
    <fullName>Advocates__c</fullName>
    <label>Advocates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>