force-app/main/default/objects/Contact/fields/Alias_Name__c.field-meta.xml
<CustomField>
    <fullName>Alias_Name__c</fullName>
    <label>Alias Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>