force-app/main/default/objects/Contact/fields/Allergy_Target__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Target__c</fullName>
    <label>Allergy Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>