force-app/main/default/objects/Contact/fields/Alternate_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Alternate_E_mail__c</fullName>
    <label>Alternate E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>