force-app/main/default/objects/Contact/fields/Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest__c</fullName>
    <label>Areas of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>