force-app/main/default/objects/Contact/fields/Assumed_by_generation__c.field-meta.xml
<CustomField>
    <fullName>Assumed_by_generation__c</fullName>
    <label>Assumed by generation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>