force-app/main/default/objects/Contact/fields/Campaign_Interest__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Interest__c</fullName>
    <label>Campaign Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>