force-app/main/default/objects/Contact/fields/CAS_acquisition_date__c.field-meta.xml
<CustomField>
    <fullName>CAS_acquisition_date__c</fullName>
    <label>CAS acquisition date</label>
    <type>Date</type>
</CustomField>