force-app/main/default/objects/Contact/fields/CAS_Permitted__c.field-meta.xml
<CustomField>
    <fullName>CAS_Permitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAS Permitted</label>
    <type>Checkbox</type>
</CustomField>