force-app/main/default/objects/Contact/fields/Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Collaboration__c</fullName>
    <label>Collaboration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>