force-app/main/default/objects/Contact/fields/Contact_Data_Description__c.field-meta.xml
<CustomField>
    <fullName>Contact_Data_Description__c</fullName>
    <label>Contact Data Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>