force-app/main/default/objects/Contact/fields/Contact_Data_Score__c.field-meta.xml
<CustomField>
    <fullName>Contact_Data_Score__c</fullName>
    <label>Contact Data Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>