force-app/main/default/objects/Contact/fields/Contact_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Contact_Discipline__c</fullName>
    <label>Contact Discipline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>