force-app/main/default/objects/Contact/fields/CRI_Trend__c.field-meta.xml
<CustomField>
    <fullName>CRI_Trend__c</fullName>
    <label>CRI Trend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>