force-app/main/default/objects/Contact/fields/CRIcalc__c.field-meta.xml
<CustomField>
    <fullName>CRIcalc__c</fullName>
    <label>CRIcalc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>