force-app/main/default/objects/Contact/fields/Current_YTD_SPE__c.field-meta.xml
<CustomField>
    <fullName>Current_YTD_SPE__c</fullName>
    <label>Current YTD SPE claims</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>