force-app/main/default/objects/Contact/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <label>Customer Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>