force-app/main/default/objects/Contact/fields/Data_Origin__c.field-meta.xml
<CustomField>
    <fullName>Data_Origin__c</fullName>
    <label>Data Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>