force-app/main/default/objects/Contact/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <label>Department Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>