force-app/main/default/objects/Contact/fields/Describe_the_Ordering_Process__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_Ordering_Process__c</fullName>
    <label>Describe the Ordering Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>