force-app/main/default/objects/Contact/fields/DHC_NPI__c.field-meta.xml
<CustomField>
    <fullName>DHC_NPI__c</fullName>
    <label>DHC NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>