force-app/main/default/objects/Contact/fields/DHC_Primary_Hospital_GPO__c.field-meta.xml
<CustomField>
    <fullName>DHC_Primary_Hospital_GPO__c</fullName>
    <label>DHC Primary Hospital GPO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>