force-app/main/default/objects/Contact/fields/DHC_Primary_Hospital_Type__c.field-meta.xml
<CustomField>
    <fullName>DHC_Primary_Hospital_Type__c</fullName>
    <label>DHC Primary Hospital Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>