force-app/main/default/objects/Contact/fields/DHC_Primary_Hospital_Zip__c.field-meta.xml
<CustomField>
    <fullName>DHC_Primary_Hospital_Zip__c</fullName>
    <label>DHC Primary Hospital Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>