force-app/main/default/objects/Contact/fields/Disease_State__c.field-meta.xml
<CustomField>
    <fullName>Disease_State__c</fullName>
    <label>Disease State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>