force-app/main/default/objects/Contact/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Notification Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>