force-app/main/default/objects/Contact/fields/DSA_Segment__c.field-meta.xml
<CustomField>
    <fullName>DSA_Segment__c</fullName>
    <label>DSA Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>