force-app/main/default/objects/Contact/fields/Duty_Title__c.field-meta.xml
<CustomField>
    <fullName>Duty_Title__c</fullName>
    <label>Duty Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>