force-app/main/default/objects/Contact/fields/Eloqua_Email_Activity__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Email_Activity__c</fullName>
    <label>Eloqua Email Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>