force-app/main/default/objects/Contact/fields/Eloqua_ID__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_ID__c</fullName>
    <label>Eloqua ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>