force-app/main/default/objects/Contact/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <label>Email Opt Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>