force-app/main/default/objects/Contact/fields/Engagement_Trend__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Trend__c</fullName>
    <label>Engagement Trend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>