force-app/main/default/objects/Contact/fields/Ever_been_TMO_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Ever_been_TMO_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ever been TMO Speaker</label>
    <type>Checkbox</type>
</CustomField>