force-app/main/default/objects/Contact/fields/Functional_job_role__c.field-meta.xml
<CustomField>
    <fullName>Functional_job_role__c</fullName>
    <label>Job Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>