force-app/main/default/objects/Contact/fields/GDPR_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Notification_Date__c</fullName>
    <label>GDPR Notification Date</label>
    <type>Date</type>
</CustomField>