force-app/main/default/objects/Contact/fields/GDPR_Notification_Version__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Notification_Version__c</fullName>
    <label>GDPR Notification Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>