force-app/main/default/objects/Contact/fields/General_Physician_Id__c.field-meta.xml
<CustomField>
    <fullName>General_Physician_Id__c</fullName>
    <label>General Physician Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>