force-app/main/default/objects/Contact/fields/Hierarchy_Updated__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hierarchy Updated</label>
    <type>Checkbox</type>
</CustomField>