force-app/main/default/objects/Contact/fields/In_Person__c.field-meta.xml
<CustomField>
    <fullName>In_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Person</label>
    <type>Checkbox</type>
</CustomField>