force-app/main/default/objects/Contact/fields/Inactive_CAT__c.field-meta.xml
<CustomField>
    <fullName>Inactive_CAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>