force-app/main/default/objects/Contact/fields/Individual_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Individual_Interaction__c</fullName>
    <label>Individual Interaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>