force-app/main/default/objects/Contact/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <label>Influence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>