force-app/main/default/objects/Contact/fields/Influence_User__c.field-meta.xml
<CustomField>
    <fullName>Influence_User__c</fullName>
    <label>Influence/User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>