force-app/main/default/objects/Contact/fields/ISO_code_CAT__c.field-meta.xml
<CustomField>
    <fullName>ISO_code_CAT__c</fullName>
    <label>ISO code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>