force-app/main/default/objects/Contact/fields/Job_details__c.field-meta.xml
<CustomField>
    <fullName>Job_details__c</fullName>
    <label>Job details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>