force-app/main/default/objects/Contact/fields/Job_Role_CAT__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_CAT__c</fullName>
    <label>Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>