force-app/main/default/objects/Contact/fields/Known_As__c.field-meta.xml
<CustomField>
    <fullName>Known_As__c</fullName>
    <label>Known As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>