force-app/main/default/objects/Contact/fields/KOL_CAT__c.field-meta.xml
<CustomField>
    <fullName>KOL_CAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KOL</label>
    <type>Checkbox</type>
</CustomField>