force-app/main/default/objects/Contact/fields/KOL_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>KOL_Characteristics__c</fullName>
    <label>KOL Characteristics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>