force-app/main/default/objects/Contact/fields/KOL_Key_Person__c.field-meta.xml
<CustomField>
    <fullName>KOL_Key_Person__c</fullName>
    <label>KOL Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>