force-app/main/default/objects/Contact/fields/Last_Form_Type_Submit__c.field-meta.xml
<CustomField>
    <fullName>Last_Form_Type_Submit__c</fullName>
    <label>Last Form Type Submit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>