force-app/main/default/objects/Contact/fields/Lead_Fidelity__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fidelity__c</fullName>
    <label>Lead Fidelity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>