force-app/main/default/objects/Contact/fields/Legal_Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>Legal_Consent_Given__c</fullName>
    <label>Legal Consent Given</label>
    <length>255</length>
    <type>Text</type>
</CustomField>