force-app/main/default/objects/Contact/fields/Legal_Consent_Given_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Consent_Given_Date__c</fullName>
    <label>Legal Consent Given Date</label>
    <type>Date</type>
</CustomField>