force-app/main/default/objects/Contact/fields/Level_of_Seniority__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Seniority__c</fullName>
    <label>Level of Seniority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>