force-app/main/default/objects/Contact/fields/Mail_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_Out__c</fullName>
    <label>Mail Opt Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>