force-app/main/default/objects/Contact/fields/Mailing_City_English__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_English__c</fullName>
    <label>Primary City (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>