force-app/main/default/objects/Contact/fields/Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_In__c</fullName>
    <label>Marketing Opt-In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>