force-app/main/default/objects/Contact/fields/Marketing_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_In_Date__c</fullName>
    <label>Marketing Opt-In Date</label>
    <type>Date</type>
</CustomField>