force-app/main/default/objects/Contact/fields/Marketing_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Opt-out</label>
    <type>Checkbox</type>
</CustomField>