force-app/main/default/objects/Contact/fields/Marketing_Outreach_Agreement_Priorit__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Outreach_Agreement_Priorit__c</fullName>
    <label>Marketing Outreach Agreement Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>