force-app/main/default/objects/Contact/fields/Marketing_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Qualified__c</fullName>
    <label>Marketing Qualified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>