force-app/main/default/objects/Contact/fields/MBD_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>MBD_Opt_in__c</fullName>
    <label>MBD Opt in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>