force-app/main/default/objects/Contact/fields/MBD_Partner__c.field-meta.xml
<CustomField>
    <fullName>MBD_Partner__c</fullName>
    <label>Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>