force-app/main/default/objects/Contact/fields/MC_Hard_Bounce__c.field-meta.xml
<CustomField>
    <fullName>MC_Hard_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Hard Bounce</label>
    <type>Checkbox</type>
</CustomField>