force-app/main/default/objects/Contact/fields/MC_Sync__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Sync</label>
    <type>Checkbox</type>
</CustomField>