force-app/main/default/objects/Contact/fields/Medical_Sub_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Medical_Sub_Specialty__c</fullName>
    <label>Medical Sub-Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>