force-app/main/default/objects/Contact/fields/Military_Rank__c.field-meta.xml
<CustomField>
    <fullName>Military_Rank__c</fullName>
    <label>Military Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>