force-app/main/default/objects/Contact/fields/National_Speaker__c.field-meta.xml
<CustomField>
    <fullName>National_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Speaker</label>
    <type>Checkbox</type>
</CustomField>