force-app/main/default/objects/Contact/fields/Non_HCP_Office_Role__c.field-meta.xml
<CustomField>
    <fullName>Non_HCP_Office_Role__c</fullName>
    <label>Non HCP Office Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>