force-app/main/default/objects/Contact/fields/NWK_Academic_title__c.field-meta.xml
<CustomField>
    <fullName>NWK_Academic_title__c</fullName>
    <label>Academic title - VOD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>