force-app/main/default/objects/Contact/fields/NWK_HCP_focus_area__c.field-meta.xml
<CustomField>
    <fullName>NWK_HCP_focus_area__c</fullName>
    <label>HCP focus area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>