force-app/main/default/objects/Contact/fields/NWK_HCP_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>NWK_HCP_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCP Opt-Out - VOD</label>
    <type>Checkbox</type>
</CustomField>