force-app/main/default/objects/Contact/fields/NWK_Record_State__c.field-meta.xml
<CustomField>
    <fullName>NWK_Record_State__c</fullName>
    <label>Record State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>