force-app/main/default/objects/Contact/fields/NWK_Surviving_Record_Veeva_ID__c.field-meta.xml
<CustomField>
    <fullName>NWK_Surviving_Record_Veeva_ID__c</fullName>
    <label>Surviving Record Veeva ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>