force-app/main/default/objects/Contact/fields/NWK_Veeva_ID__c.field-meta.xml
<CustomField>
    <fullName>NWK_Veeva_ID__c</fullName>
    <label>Network ID (VOD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>