force-app/main/default/objects/Contact/fields/Objection_to_Ordering_More__c.field-meta.xml
<CustomField>
    <fullName>Objection_to_Ordering_More__c</fullName>
    <label>Objection to Ordering More</label>
    <length>255</length>
    <type>Text</type>
</CustomField>