force-app/main/default/objects/Contact/fields/Opinion_Leader__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Leader__c</fullName>
    <label>Opinion Leader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>