force-app/main/default/objects/Contact/fields/Other_Department__c.field-meta.xml
<CustomField>
    <fullName>Other_Department__c</fullName>
    <label>Other - Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>