force-app/main/default/objects/Contact/fields/Other_Presentation_Languages__c.field-meta.xml
<CustomField>
    <fullName>Other_Presentation_Languages__c</fullName>
    <label>Other Presentation Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>