force-app/main/default/objects/Contact/fields/Other_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Other_Pronouns__c</fullName>
    <label>Other Pronouns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>