force-app/main/default/objects/Contact/fields/Outreach_Rep__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outreach Rep</label>
    <type>Checkbox</type>
</CustomField>