force-app/main/default/objects/Contact/fields/Partnership_Health_Survey_LTR__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Health_Survey_LTR__c</fullName>
    <label>Partnership Health Survey LTR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>