force-app/main/default/objects/Contact/fields/Perception_Promotor_Detractor__c.field-meta.xml
<CustomField>
    <fullName>Perception_Promotor_Detractor__c</fullName>
    <label>Perception / Promotor - Detractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>