force-app/main/default/objects/Contact/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <label>Phone2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>