force-app/main/default/objects/Contact/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone</label>
    <type>Checkbox</type>
</CustomField>