force-app/main/default/objects/Contact/fields/Phone_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Phone_Opt_Out__c</fullName>
    <label>Phone Opt Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>