force-app/main/default/objects/Contact/fields/Position_Description__c.field-meta.xml
<CustomField>
    <fullName>Position_Description__c</fullName>
    <label>Position Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>