force-app/main/default/objects/Contact/fields/Presentation_skills_rating__c.field-meta.xml
<CustomField>
    <fullName>Presentation_skills_rating__c</fullName>
    <label>Presentation skills rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>