force-app/main/default/objects/Contact/fields/Primary_Contact_for_Acct__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_for_Acct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact for Account</label>
    <type>Checkbox</type>
</CustomField>