force-app/main/default/objects/Contact/fields/Product_Solution_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Solution_of_Interest__c</fullName>
    <label>Product / Solution of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>