force-app/main/default/objects/Contact/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <label>Pronouns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>