force-app/main/default/objects/Contact/fields/Reason_for_Product_Need__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Product_Need__c</fullName>
    <label>Reason for Product/Need</label>
    <length>255</length>
    <type>Text</type>
</CustomField>