force-app/main/default/objects/Contact/fields/Revere_ABX_5_Role__c.field-meta.xml
<CustomField>
    <fullName>Revere_ABX_5_Role__c</fullName>
    <label>Revere ABX 5 Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>