force-app/main/default/objects/Contact/fields/SAP_Success_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SAP_Success_Error_Message__c</fullName>
    <label>SAP Success/Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>