force-app/main/default/objects/Contact/fields/SAPExternalId__c.field-meta.xml
<CustomField>
    <fullName>SAPExternalId__c</fullName>
    <label>SAPExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>