force-app/main/default/objects/Contact/fields/SCM_Synced_Contact__c.field-meta.xml
<CustomField>
    <fullName>SCM_Synced_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCM Synced Contact</label>
    <type>Checkbox</type>
</CustomField>