force-app/main/default/objects/Contact/fields/Showpad_Shared_Space__c.field-meta.xml
<CustomField>
    <fullName>Showpad_Shared_Space__c</fullName>
    <label>Showpad Shared Space</label>
    <length>255</length>
    <type>Text</type>
</CustomField>