force-app/main/default/objects/Contact/fields/SLX_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>SLX_Contact_Id__c</fullName>
    <label>SalesLogix Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>