force-app/main/default/objects/Contact/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <label>Social Media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>